--- a/.github/workflows/jd_jxnc.yml
+++ b/.github/workflows/jd_jxnc.yml
@@ -6,7 +6,7 @@ name: jd_jxnc
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 1,4,10 * * *'
+    - cron: '0 1,4,10 * * *'#此处为UTC-0时间
   watch:
     types: [started]
   repository_dispatch:
