--- a/.github/workflows/jd_live_redrain_nian.yml
+++ b/.github/workflows/jd_live_redrain_nian.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: live_redrain_nian
+name: jd_live_redrain_nian
 
 on:
   workflow_dispatch:
@@ -10,7 +10,7 @@ on:
   watch:
     types: [started]
   repository_dispatch:
-    types: jd_live_redrain_nian
+    types: live_redrain_nian
 jobs:
   build:
 
