--- a/.github/workflows/jd_vote.yml
+++ b/.github/workflows/jd_vote.yml
@@ -37,7 +37,7 @@ jobs:
           npm install
       - name: '运行 【京年团圆pick】'
         run: |
-          node jd_car_exchange.js
+          node jd_vote.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
